# metacub_dashboard

./: .gitignore  ARCHITECTURE.md  CLEANUP_COMPLETE.md  POLARS_MIGRATION_COMPLETE.md  PURE_POLARS_COMPLETE.md  README.md  dummy_action_server.py  inspect_episode.py  pyproject.toml  replay_episode.py  world.sdf
metacub_dashboard/: main.py
metacub_dashboard/data_logger/: data_logger.py  logger.py  polars_logger.py
metacub_dashboard/interfaces/: __init__.py  interfaces.py
metacub_dashboard/interfaces/utils/: __init__.py  control_loop_reader.py  observation_reader.py
metacub_dashboard/utils/: dataframe_processor.py  keyboard_interface.py  yarp_manager.py
metacub_dashboard/visualizer/: polars_visualizer.py  visualizer.py
metacub_dashboard/visualizer/utils/: gradio_interface.py  stream_router.py  urdf_logger.py
scripts/: dataset_visualizer.py  dataset_visualizer_v3.py  dummy_action_server.py  inspect_frame_data.py  replay_episode.py
src/metacub_dashboard/: main.py
src/metacub_dashboard/data_logger/: data_logger.py  logger.py  stream_logger.py
src/metacub_dashboard/data_logger/utils/: depth_compression.py
src/metacub_dashboard/interfaces/: __init__.py  action_interface.py  camera_interface.py  data_packet.py  encoders_interface.py  interfaces.py  stream_data.py
src/metacub_dashboard/interfaces/utils/: control_loop_reader.py  observation_reader.py  observation_reader_new.py
src/metacub_dashboard/utils/: keyboard_interface.py
src/metacub_dashboard/visualizer/: visualizer.py  visualizer_new.py
src/metacub_dashboard/visualizer/utils/: blueprint.py  stream_router.py
