[project]
authors = [{name = "kdpe-robotics", email = "no-reply@kdpe-robotics.com"}]
name = "metaCub_dashboard"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "gradio>=5.22.0", "gradio-rerun>=0.23.2", "urdf-parser-py>=0.0.4,<0.0.5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "robotology"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
metaCub_dashboard = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
rerun-sdk = ">=0.23.2,<0.24"
opencv = ">=4.11.0,<5"
scipy = ">=1.15.2,<2"
h5py = ">=3.13.0,<4"
trimesh = ">=4.6.9,<5"
matplotlib = ">=3.10.3,<4"
pycollada = ">=0.9,<0.10"
yarp = "==3.11.2"
pytorch = ">=2.7.0,<3"
zarr = ">=3.0.8,<4"
numcodecs = ">=0.15.1,<0.16"
imagecodecs = ">=2024.12.30,<2025"
ergocub-software = "==0.7.7"
